PORT-270 fixed overlapped LI on IE8, tested on IE7, FF3, FF4, Chrome
git-svn-id: https://doiweb-repo.anu.edu.au/repositories/es-projects/anu-portlets/simple-rss-portlet/trunk@9538 37c5b581-7024-0410-98b2-893b731772de

--- a/src/main/webapp/css/simple-rss-portlet.css
+++ b/src/main/webapp/css/simple-rss-portlet.css
@@ -23,5 +23,7 @@
 }
 
 .news-items li {
-    display:inline-block;
+    display: block;
+    float: left;
+    width: 100%;
 }
